issue #432 whitespace gap on mobile (#435)

--- a/themes/ansible-community/sass/_global-container.scss
+++ b/themes/ansible-community/sass/_global-container.scss
@@ -9,7 +9,7 @@
   }
   @media screen and (max-width: 768px) {
     padding: 0 2rem;
-    padding-bottom: 8rem;
+    padding-bottom: 7.5rem;
   }
 }
 
